--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
     <h1>Update CSS Variables with <span>JS</span></h1>
     <div class="control">
     <label for="spacing">Spacing</label>
-    <input type="range" id="spacing" name="spacing" min="10" max="200" value="10" data-unit="px"/>
+    <input type="range" id="spacing" name="space" min="10" max="200" value="10" data-unit="px"/>
     <label for="blur">Blur</label>
     <input type="range" id="blur" name="blur" min="0" max="25" value="0" data-unit="px"/>
     <label for="base-color">Base Color</label>
-    <input type="color" id="base-color" name="base-color" value="#ffc200"/>
+    <input type="color" id="base-color" name="base" value="#ffc200"/>
 </div>
 <img src="./picture.jpeg" alt="pictures of the forbidden city"/>
     
