--- a/index.html
+++ b/index.html
@@ -1,25 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CSS Variables</title>
-    <link rel="stylesheet" href="./styles.css">
-</head>
-<body>
+    <link rel="stylesheet" href="./styles.css" />
+  </head>
+  <body>
     <h1>Update CSS Variables with <span>JS</span></h1>
     <div class="control">
-    <label for="spacing">Spacing</label>
-    <input type="range" id="spacing" name="space" min="10" max="200" value="10" data-unit="px"/>
-    <label for="blur">Blur</label>
-    <input type="range" id="blur" name="blur" min="0" max="15" value="15" data-unit="px"/>
-    <label for="base-color">Base Color</label>
-    <input type="color" id="base-color" name="base" value="#ffc200"/>
-</div>
-<img src="./picture.jpeg" alt="pictures of the forbidden city"/>
-    
+      <label for="blur">Blur</label>
+      <input
+        type="range"
+        id="blur"
+        name="blur"
+        min="0"
+        max="15"
+        value="15"
+        data-unit="px"
+      />
+      <label for="spacing">Spacing</label>
+      <input
+        type="range"
+        id="spacing"
+        name="space"
+        min="10"
+        max="200"
+        value="10"
+        data-unit="px"
+      />
+
+      <label for="base-color">Base Color</label>
+      <input type="color" id="base-color" name="base" value="#ffc200" />
+    </div>
+    <img src="./picture.jpeg" alt="pictures of the forbidden city" />
 
     <script src="./index.js"></script>
-</body>
+  </body>
 </html>
