--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       <label for="base-color">Base Color</label>
       <input type="color" id="base-color" name="base" value="#ffc200" />
     </div>
-    <img src="./picture.jpeg" alt="pictures of the forbidden city" />
+    <img src="./IMG_0711.JPG" alt="pictures of the forbidden city" />
 
     <script src="./index.js"></script>
   </body>
